--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					</h1>
 
 					<p> An aspring Software Developer and Data Scientist with a strong programming foundation and experience in data science and analytics,
-					 eager to drive innovation in a dynamic team environments. </p>
+					 eager to drive innovation in dynamic team environments. </p>
 
 					<ul class="actions">
 						<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
