--- a/elements.html
+++ b/elements.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Elements Reference - Massively by HTML5 UP</title>
+		<title> Contact Info </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -35,9 +35,6 @@
 		<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 		<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 		<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-	</ul>-->
-				<ul class="icons">
-					<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 		<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>-->
 					<li><a href="https://www.linkedin.com/in/shahriar-bin-zaman/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					<li><a href="https://gitlab.com/users/shahriarbin.zaman/projects" class="icon brands fa-gitlab"><span class="label">GitLab</span></a></li>
