--- a/elements.html
+++ b/elements.html
@@ -30,12 +30,8 @@
 					<li><a href="generic.html">Resume</a></li>
 					<li class="active"><a href="elements.html">Contact</a></li>
 				</ul>
-				<!--<ul class="icons">
-		<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-		<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-		<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-		<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-		<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>-->
+				<ul class="icons">
+		
 					<li><a href="https://www.linkedin.com/in/shahriar-bin-zaman/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					<li><a href="https://gitlab.com/users/shahriarbin.zaman/projects" class="icon brands fa-gitlab"><span class="label">GitLab</span></a></li>
 				</ul>
