--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 								<header>
 									<span class="date">June, 2023</span>
 									<h2>
-										<a href="#" style="color: #00008b;">
+										<a href="https://github.com/shahriarbinzaman/shahriarbinzaman.github.io" style="color: #00008b;">
 											Personal Website<br />
 
 										</a>
