--- a/generic.html
+++ b/generic.html
@@ -7,8 +7,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	
 
+	
 </head>
 
 
@@ -17,8 +17,10 @@
 	<div id="wrapper">
 		<!-- Header -->
 		<header id="header">
-			<a href="index.html" class="logo">About Me</a>
-		</header>
+		<a href="index.html" class="logo">About Me</a>
+	</header>
+		
+		
 
 		<!-- Nav -->
 		<nav id="nav">
@@ -40,13 +42,13 @@
 				<header class="major">
 					<span class="date">Professional Experience</span>
 					<!--<h2 style="font-size: 50px;">
-				Software Developer Coop
-			</h2>
+		Software Developer Coop
+	</h2>
 
-			<p>
-				<span class="job-duration">January 2023 - Present </span><br />
-				<span class="job-location">Edmonton, Alberta, Canada</span>
-			</p>-->
+	<p>
+		<span class="job-duration">January 2023 - Present </span><br />
+		<span class="job-location">Edmonton, Alberta, Canada</span>
+	</p>-->
 					<a href="images/resume.pdf" download="ShahriarBinZaman-Resume.pdf" class="download-button">
 						Download Resume
 					</a>
@@ -68,9 +70,16 @@
 					</style>
 
 
+					<!--<h2 style="font-size: 50px; text-align: left;">
+		Software Developer Coop
+	</h2>-->
+
 					<h2 style="font-size: 50px; text-align: left;">
+						<img src="images/ahs.jfif" alt="logo" style="width: 100px; height: 100px; vertical-align: middle; margin-right: 10px;">
 						Software Developer Coop
 					</h2>
+
+
 
 					<p style="text-align: left;">
 						<span class="job-duration"><strong>Alberta Health Services </strong></span><br />
@@ -98,18 +107,20 @@
 				<header>
 
 					<!--<h2 style="font-size: 50px;">
-				Software Developer Coop
-			</h2>
+		Software Developer Coop
+	</h2>
 
-			<p>
-				<span class="job-duration">January 2023 - Present </span><br />
-				<span class="job-location">Edmonton, Alberta, Canada</span>
-			</p>-->
-
+	<p>
+		<span class="job-duration">January 2023 - Present </span><br />
+		<span class="job-location">Edmonton, Alberta, Canada</span>
+	</p>-->
+					<!--<h2 style="font-size: 50px; text-align: left;">
+		Data Science Student Intern
+	</h2>-->
 					<h2 style="font-size: 50px; text-align: left;">
+						<img src="images/uofc.jpg" alt="logo" style="width: 100px; height: 100px; vertical-align: middle; margin-right: 10px;">
 						Data Science Student Intern
 					</h2>
-
 					<p style="text-align: left;">
 						<span class="job-duration"><strong>University of Calgary </strong></span><br />
 						<span class="job-duration">May 2022 - August 2022 </span><br />
@@ -138,15 +149,18 @@
 				<header>
 
 					<!--<h2 style="font-size: 50px;">
-				Software Developer Coop
-			</h2>
+		Software Developer Coop
+	</h2>
 
-			<p>
-				<span class="job-duration">January 2023 - Present </span><br />
-				<span class="job-location">Edmonton, Alberta, Canada</span>
-			</p>-->
-
+	<p>
+		<span class="job-duration">January 2023 - Present </span><br />
+		<span class="job-location">Edmonton, Alberta, Canada</span>
+	</p>-->
+					<!--<h2 style="font-size: 50px; text-align: left;">
+		Software Team Member
+	</h2>-->
 					<h2 style="font-size: 50px; text-align: left;">
+						<img src="images/ac.jfif" alt="logo" style="width: 100px; height: 100px; vertical-align: middle; margin-right: 10px;">
 						Software Team Member
 					</h2>
 
@@ -182,15 +196,15 @@
 					<a href="#" class="page active">2</a>
 					<a href="elements.html" class="page">3</a>
 					<!--<span class="extra">&hellip;</span>
-	<a href="#" class="page">8</a>
-	<a href="#" class="page">9</a>
-	<a href="#" class="page">10</a>-->
+				<a href="#" class="page">8</a>
+				<a href="#" class="page">9</a>
+				<a href="#" class="page">10</a>-->
 					<a href="elements.html" class="next">Next</a>
 				</div>
 			</footer>
 		</div>
 
-		
+
 		<div id="copyright">
 			<ul><li>&copy; Shahriar Bin Zaman 2023</li></ul>
 		</div>
