--- a/generic.html
+++ b/generic.html
@@ -52,22 +52,23 @@
 					<a href="images/resume.pdf" download="ShahriarBinZaman-Resume.pdf" class="download-button">
 						Download Resume
 					</a>
+<style>
+	.download-button {
+		display: inline-block;
+		padding: 10px 20px;
+		background: linear-gradient(to right, #000000, #808080); /* Gradient from black to grey */
+		color: white;
+		text-decoration: none;
+		border-radius: 5px;
+		float: right; /* This will move the button to the right */
+	}
 
-					<style>
-						.download-button {
-							display: inline-block;
-							padding: 10px 20px;
-							background-color: #808080; /* This is a shade of grey */
-							color: white;
-							text-decoration: none;
-							border-radius: 5px;
-							float: right; /* This will move the button to the right */
-						}
+	.download-button:hover {
+		background: linear-gradient(to right, #808080, #000000); /* Reverse gradient on hover */
+		color: #F0F0F0; /* Change the text color to light gray on hover */
+	}
+</style>
 
-							.download-button:hover {
-								background-color: #606060; /* A darker shade of grey for hover effect */
-							}
-					</style>
 
 
 					<!--<h2 style="font-size: 50px; text-align: left;">
