--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 						Shahriar Bin Zaman
 					</h1>
 
-					<p> An aspring Software Developer and Data Scientist with a strong programming foundation and experience in data science and analytics,
+					<p> An aspiring Software Developer and Data Scientist with a strong programming foundation and experience in data science and analytics,
 					 eager to drive innovation in a dynamic team environments. </p>
 
 					<ul class="actions">
