--- a/generic.html
+++ b/generic.html
@@ -49,7 +49,7 @@
 		<span class="job-duration">January 2023 - Present </span><br />
 		<span class="job-location">Edmonton, Alberta, Canada</span>
 	</p>-->
-					<a href="images/resume.pdf" download="ShahriarBinZaman-Resume.pdf" class="download-button">
+					<a href="images/Shahriar Bin Zaman_Resume_3.pdf" download="ShahriarBinZaman-Resume.pdf" class="download-button">
 						Download Resume
 					</a>
 <style>
